# Pinquiry

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/backend-api/api/: HELP.md  pom.xml
src/backend-api/pinquiry/pinquiry/: pom.xml
src/monitor-service/: backend_client.cpp  backend_client.h  backend_receiver.cpp  backend_receiver.h  http_client.cpp  http_client.h  json_handler.cpp  json_handler.h  main.cpp  monitor_logger.cpp  monitor_logger.h  monitor_object.h  monitor_result.h  monitor_service.cpp  monitor_service.h  monitor_watcher.cpp  monitor_watcher.h  ping_client.cpp  ping_client.h  ping_receiver.cpp  ping_receiver.h
src/monitor-service/include/: httplib.h
src/pinquiry-web-app/web-app-frontend/src/Pages/: MonitorDetails.jsx
src/web-app-frontend/: .env  package-lock.json  package.json
src/web-app-frontend/public/: index.html
src/web-app-frontend/src/: App.css  App.jsx  index.css  index.js
src/web-app-frontend/src/Components/: AdminSecureComponent.jsx  AreaChartCard.jsx  AreaChartCardFull.jsx  BasicCard.jsx  BasicLineCard.jsx  BasicTextCard.jsx  Navbar.jsx  PieChartCard.jsx  RectangleCard.jsx  SecureRoute.jsx  adminSecureRoute.jsx
src/web-app-frontend/src/Pages/: AddMonitor.jsx  Dashboard.jsx  LandingPage.jsx  MonitorDetails.jsx  OldLandingPage.jsx
src/web-app-frontend/src/Pages/About/: index.jsx
src/web-app-frontend/src/Pages/AddMonitor/: AddForm.jsx  ContentForm.jsx  HttpForm.jsx  PingForm.jsx  index.jsx
src/web-app-frontend/src/Pages/Dashboard/: CustomTooltip.jsx  index.jsx
src/web-app-frontend/src/Pages/EditProfile/: index.jsx
src/web-app-frontend/src/Pages/LandingPage/: Login.jsx  Signup.jsx  index.jsx
src/web-app-frontend/src/Pages/MonitorApp/: Sidebar.jsx  (+2 more)
src/web-app-frontend/src/Services/: axiosInstance.js  backendComm.js  login.js  signup.js  whoAmI.js
test/monitor-service/: CMakeLists.txt  unit_tests.cpp
(+142 files in other folders)
